Add multiselect and more editing for classifiers